# Multi-agent-project

./: pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/Store/: store.ts
frontend/src/common/: ApiObj.ts  NetworkOps.ts  config.ts  constants.ts
frontend/src/custom_hooks/: useChatStream.ts
frontend/src/router/: router.tsx
frontend/src/toastMessage/: toast.ts
frontend/src/utils/: loginScehma.ts  signUpSchema.ts
services/api-gateway/: package-lock.json  package.json
services/api-gateway/prisma/: schema.prisma
services/api-gateway/src/: app.module.ts  main.ts
services/evaluation_service/: pyproject.toml
services/evaluation_service/app/: main.py
services/ingestion_service/: pyproject.toml  requirements.txt
services/ingestion_service/app/: main.py
services/ingestion_service/app/api/: route.py
services/ingestion_service/app/chunking/: splitter.py
services/ingestion_service/app/core/: config.py  security.py
services/ingestion_service/app/loader/: encoder.py
services/ingestion_service/app/pinecone/: upsert.py
services/orchestrator/: pyproject.toml
services/orchestrator/app/: main.py
services/orchestrator/scripts/: setup_checkpointer.py
services/retrieval-service/: pyproject.toml
services/retrieval-service/app/: main.py
services/retrieval-service/app/api/: routes.py
services/retrieval-service/app/core/: config.py  security.py
services/retrieval-service/app/pinecone/: namespace_router.py
shared/contracts/: schema.py
shared/embeddings/: __init__.py  embeddings.py
(+66 files in other folders)
