[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
]
[tool.uv.workspace]
members = [
    "services/retrieval-service",
    "services/orchestrator",
    "services/ingestion-service",
    "services/evaluation-service",
    "services/retriever-service",
    "services/ingestion_service",
    "services/evaluation_service",
]
