[project]
name = "ingestion-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "unstructured>=0.23.1",
    "uvicorn>=0.50.0",
]
