[project]
name = "retriever-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.50.0",
]
